--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "doctorclinic",
-    "short_name": "doctorclinic",
+    "name": "Zeromedixine",
+    "short_name": "Zeromedixine",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
