--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: doctorclinic
+name: Zeromedixine
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -37,6 +37,22 @@ dependencies:
   country_code_picker: ^3.0.0
   phone_numbers_parser: ^8.3.0
   http: ^1.2.1
+  shared_preferences: ^2.5.3
+  permission_handler: ^11.3.0
+  url_launcher: ^6.2.6
+  webview_flutter: ^4.7.0
+  webview_flutter_android: ^4.10.1
+  webview_flutter_wkwebview: ^3.23.0
+  google_fonts: ^6.2.1
+  intl: ^0.19.0
+
+
+
+
+
+
+
+
 
 
 dev_dependencies:
