--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -90,12 +90,12 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "doctorclinic" "\0"
+            VALUE "FileDescription", "Zeromedixine" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "doctorclinic" "\0"
+            VALUE "InternalName", "Zeromedixine" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2025 com.example. All rights reserved." "\0"
-            VALUE "OriginalFilename", "doctorclinic.exe" "\0"
-            VALUE "ProductName", "doctorclinic" "\0"
+            VALUE "OriginalFilename", "Zeromedixine.exe" "\0"
+            VALUE "ProductName", "Zeromedixine" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
