--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,9 @@ dependencies:
   webview_flutter_wkwebview: ^3.23.0
   google_fonts: ^6.2.1
   intl: ^0.19.0
+  share_plus: ^7.2.1
+  path_provider: ^2.1.2
+
 
 
 
