--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,10 @@ dependencies:
   intl: ^0.19.0
   share_plus: ^7.2.1
   path_provider: ^2.1.2
+  #Firebase Notification
+  firebase_core: ^2.30.0
+  firebase_messaging: ^14.7.10
+  flutter_local_notifications: ^17.1.2
 
 
 
